--- a/index.html
+++ b/index.html
@@ -63,13 +63,17 @@
 
                     <div class="nav-mobile">
                         <ul class="left">
-                            <li><a href="#"> Home</a></li>
-                            <li><a href="#"> Skills</a></li>
-                            <li><a href="#"> About</a></li>
+                            <li>
+                                <a href="#port">
+                                    <h6>Portfolio</h6></a>
+                            </li>
+                            <li><a href="skil"><h6>Skills</h6> </a></li>
+                            <li><a href="#"><h6>About</h6> </a></li>
+                            <li><a href="#cont"><h6>Contact</h6> </a></li>
                         </ul>
                         <ul class="right">
                             <li>
-                                <a href="#"> Contact</a>
+                                <!--                                <a href="#"> Contact</a>-->
                             </li>
                             <li>
                                 <!--                                <a href="#"><i class="fa fa-envelope"></i> Contact</a>-->
