--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <a href="#port">
                                     <h6>Portfolio</h6></a>
                             </li>
-                            <li><a href="skil"><h6>Skills</h6> </a></li>
+                            <li><a href="#skil"><h6>Skills</h6> </a></li>
                             <li><a href="#"><h6>About</h6> </a></li>
                             <li><a href="#cont"><h6>Contact</h6> </a></li>
                         </ul>
@@ -331,8 +331,10 @@
         <div class="row">
             <div class="small-2 large-4 columns twit">
 
+<!--
                 <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter fa-3x twyt " aria-hidden="true"></i>
                 </a>
+-->
             </div>
             <div class="small-4 large-4 columns gitblog">
 
@@ -341,11 +343,13 @@
 
 
 
+<!--
                 <a href="http://arvidquarshie.github.io/blog/">
                     <i class="fa fa-bars fa-3x" aria-hidden="true"></i>
 
 
                 </a>
+-->
 
                 <br>
 
@@ -359,11 +363,10 @@
             </div>
             <div class="small-6 large-4 columns linked">
 
-                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x lynk" aria-hidden="true"></i></a>
+<!--                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x lynk" aria-hidden="true"></i></a>-->
             </div>
         </div>
-
-    </div>
+</div>
 
 
     <script src="js/vendor/jquery.js"></script>
