--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 
 
-    <div class="skills" id="skil">
+    <div class="skills small-up-1 medium-up-2 large-up-3" id="skil">
         <div class="row">
             <div class="small-0 large-4 columns">
                 <br>
@@ -331,7 +331,7 @@
         <div class="row">
             <div class="small-2 large-4 columns twit">
 
-<!--
+                <!--
                 <a href="http://www.twitter.com/quarshie_arvid"> <i class="fa fa-twitter fa-3x twyt " aria-hidden="true"></i>
                 </a>
 -->
@@ -343,7 +343,7 @@
 
 
 
-<!--
+                <!--
                 <a href="http://arvidquarshie.github.io/blog/">
                     <i class="fa fa-bars fa-3x" aria-hidden="true"></i>
 
@@ -363,10 +363,10 @@
             </div>
             <div class="small-6 large-4 columns linked">
 
-<!--                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x lynk" aria-hidden="true"></i></a>-->
+                <!--                <a href="https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name"><i class="fa fa-linkedin fa-3x lynk" aria-hidden="true"></i></a>-->
             </div>
         </div>
-</div>
+    </div>
 
 
     <script src="js/vendor/jquery.js"></script>
