--- a/index.html
+++ b/index.html
@@ -338,6 +338,10 @@
             </div>
             <div class="small-4 large-4 columns gitblog">
 
+                <a href=""><h6>Blog</h6></a>
+                <a href=""><h6>LinkedIn</h6></a>
+                <a href=""><h6>Twitter</h6></a>
+
 
 
 
