--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
             </div>
             <div class="small-4 large-4 columns gitblog">
 
-                <a href=""><h6>Blog</h6></a>
-                <a href=""><h6>LinkedIn</h6></a>
-                <a href=""><h6>Twitter</h6></a>
+                <a href="http://arvidquarshie.github.io/blog/"><h6>Blog</h6></a>
+                <a href=" <a href=" https://www.linkedin.com/in/arvid-quarshie-24a530120?trk=hp-identity-name ">"><h6>LinkedIn</h6></a>
+                <a href="http://www.twitter.com/quarshie_arvid"><h6>Twitter</h6></a>
 
 
 
