--- a/index.html
+++ b/index.html
@@ -114,22 +114,22 @@
             <div class=" columns">
 
                 <figure class="snip1524">
-                    <img src="./img/whiplash.png" alt="sample26" />
+                    <img src="./img/android.png" alt="sample26" />
                     <figcaption>
-                        <h2>Whiplash</h2>
+                        <h2>Google-Maps</h2>
 
                     </figcaption>
-                    <a href="http://arvidquarshie.github.io/whiplash/"></a>
+                    <a href=""></a>
                 </figure>
             </div>
             <div class=" columns">
                 <figure class="snip1524">
-                    <img src="./img/board.jpg" />
+                    <img src="./img/android.png" />
                     <figcaption>
-                        <h2>Instinkt</h2>
+                        <h2>Ocliney</h2>
 
                     </figcaption>
-                    <a href="https://arvidquarshie.github.io/instinct/"></a>
+                    <a href="http://bit.ly/2a0XhSr"></a>
                 </figure>
 
             </div>
@@ -240,12 +240,12 @@
         </div>
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/android.png" alt="sample26" />
+                <img src="./img/board.jpg" alt="sample26" />
                 <figcaption>
-                    <h2>Google-Maps</h2>
+                    <h2>Instinkt</h2>
 
                 </figcaption>
-                <a href="http://imprints.bitballoon.com/"></a>
+                <a href="http://arvidquarshie.github.io/instinct"></a>
             </figure>
 
         </div>
@@ -253,10 +253,10 @@
             <figure class="snip1524">
                 <img src="./img/android.png" alt="sample26" />
                 <figcaption>
-                    <h2>Ocliney</h2>
+                    <h2>Whiplash</h2>
 
                 </figcaption>
-                <a href="http://bit.ly/2a0XhSr"></a>
+                <a href="http://arvidquarshie.github.io/whiplash"></a>
             </figure>
 
         </div>
