edited the gallery

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/android.png" alt="sample26" />
+                <img src="./img/whiplash.jpg" alt="sample26" />
                 <figcaption>
                     <h2>Whiplash</h2>
 
