edited the portfolio

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/board.jpg" alt="sample26" />
+                <img src="./img/whiplashh.png" alt="sample26" />
                 <figcaption>
                     <h2>Instinkt</h2>
 
@@ -251,7 +251,7 @@
         </div>
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/whiplash.jpg" alt="sample26" />
+                <img src="./img/whiplash.png" alt="sample26" />
                 <figcaption>
                     <h2>Whiplash</h2>
 
