edited portfolio and landing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/main.css">
     <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -210,12 +209,12 @@
         </div>
         <div class="columns">
             <figure class="snip1524">
-                <img src="./img/android.png" alt="sample26" />
+                <img src="./img/raid.png" alt="sample26" />
                 <figcaption>
-                    <h2>Vintage</h2>
+                    <h2>Raid</h2>
 
                 </figcaption>
-                <a href="http://bit.ly/2a0XhSr"></a>
+                <a href="http://anampiu.github.io/raid/"></a>
             </figure>
 
         </div>
