--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
 
-        <div class="row" id="landing">
+        <div class="row land">
             <div class="overlay">
 
                 <!--
@@ -67,7 +67,7 @@
                                     <h6>Portfolio</h6></a>
                             </li>
                             <li><a href="#skil"><h6>Skills</h6> </a></li>
-                            <li><a href="#"><h6>About</h6> </a></li>
+                            <!--                           <li><a href="#"><h6>About</h6> </a></li>-->
                             <li><a href="#cont"><h6>Contact</h6> </a></li>
                         </ul>
                         <ul class="right">
@@ -88,7 +88,7 @@
                         <br>
                     </div>
                     <div class="small-12 large-8 columns intro">
-                        <h1> Hi my name is Arvid Quarshie and Software Engineering is my passion.</h1>
+                        <h1> Hi my name is Arvid Quarshie and my passion is learning and helping others.</h1>
                     </div>
                     <div class="small-0 large-2 columns">
                         <br>
@@ -107,6 +107,7 @@
             </div>
         </div>
     </div>
+
     <div class="portfolio" id="port">
         <h1>Portfolio</h1>
         <div class="row small-up-1 large-up-3 medium-up-2 columns">
@@ -145,42 +146,53 @@
             </div>
 
 
-            <div class=" columns">
 
-                <figure class="snip1524">
-                    <img src="./img/cover.jpg" alt="sample26" />
-                    <figcaption>
-                        <h2>Music App</h2>
 
-                    </figcaption>
-                    <a href=" http://bit.ly/2ag1G7m "></a>
-                </figure>
-            </div>
-            <div class="columns">
-                <figure class="snip1524">
-                    <img src="./img/crop.jpg" />
-                    <figcaption>
-                        <h2>Camera and Crop </h2>
 
-                    </figcaption>
-                    <a href="http://bit.ly/29ZAgN8"></a>
-                </figure>
-
-            </div>
-            <div class="columns">
-                <figure class="snip1524">
-                    <img src="./img/android.png" alt="sample26" />
-                    <figcaption>
-                        <h2>Keebanda</h2>
-
-                    </figcaption>
-                    <a href="http://bit.ly/2a0XhSr"></a>
-                </figure>
-
-            </div>
 
 
         </div>
+
+
+    </div>
+
+    <div class="portfolio0 row small-up-1 medium-up-2 large-up-3 column">
+        <div class=" columns">
+
+            <figure class="snip1524">
+                <img src="./img/cover.jpg" alt="sample26" />
+                <figcaption>
+                    <h2>Music App</h2>
+
+                </figcaption>
+                <a href=" http://bit.ly/2ag1G7m "></a>
+            </figure>
+        </div>
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/crop.jpg" />
+                <figcaption>
+                    <h2>Camera and Crop </h2>
+
+                </figcaption>
+                <a href="http://bit.ly/29ZAgN8"></a>
+            </figure>
+
+        </div>
+
+        <div class="columns">
+            <figure class="snip1524">
+                <img src="./img/android.png" alt="sample26" />
+                <figcaption>
+                    <h2>Keebanda</h2>
+
+                </figcaption>
+                <a href="http://bit.ly/2a0XhSr"></a>
+            </figure>
+
+        </div>
+
+
 
 
     </div>
